--- a/_posts/2019-06-03-376-mba1301.md
+++ b/_posts/2019-06-03-376-mba1301.md
@@ -5,3 +5,269 @@ pid: 376
 tags: [MBA]
 ---
 
+下午好！首先和各位同学做一下自我介绍。我现在是在达特茅斯大学塔克商学院工作，我在MC49（位于硅谷的一个孵化器），在那边跟他们有合作。在过去的15年的时间里面，我一直都在研究创新，我也跟一些美国的企业合作，帮助他们更好的找到创新之道。2008年和2009年，通用电气邀请我全职加入GE工作，所以我请了两年的假，一共是24个月，去到GE和他们的CEO杰夫·伊梅尔特共事，为GE带来创新。
+
+# 创新
+
+1.1我们为何要创新
+
+中国未来最大的挑战就在于创新。中国有非常悠久的历史和文化的传承，但是经济发展的历史相对较短。
+
+中国刚改革开放第一阶段的时候，是一个低成本的全世界的制造中心，这是中国打造竞争力的第一步。第二阶段，中国就开始发展创新了。而且现在已经经历了转型和过渡，也就是从模仿到自主的创新。
+
+但是我们需要做的更多。如果说中国想要继续成为世界上的一个领先者，要诞生更多增长型的企业，那么创新就是其中至关重要的一个挑战。我会介绍一系列的概念和框架，以及一些想法、一些思维模型、一些工具，真正的加速你们的创新里程。
+
+1.2创新等于战略
+
+很多公司都会希望成为未来的领导者，那么如何成为未来的领导者？
+
+未来每一个行业都会有变化，所以必须要去适应、要把握这种变化的趋势，怎么样去适应变化，它的方法、手段、渠道就是创新，创新就等于战略。
+
+企业的管理者经常会问我，是不是每一个行业都需要创新呢？是不是有这么一个行业它几乎没有什么变化？其实我自己也参与到这个行业里面，就是学术。
+
+但是问问大家一个问题，假设我们现在写一个一百年以前世界最好的10所大学，在这张名单上有多少是美国的学校呢？
+
+答案是0。像MIT、哈佛都不在这个10家榜单上，十所最佳的大学哪个国家的最多呢？是德国，那时候十大高校里面六所来自于德国。
+
+如果你觉得学术界是静态的，100年来都没有变化，那么领先的那个国家或者那些大学应该没有变化，但其实不是，因为现在我们看这个名单完完全全被反转了，现在在前十里面没有一所是德国的学校，而且现在大家广为人知的都是美国的那些学校，斯坦福、哈佛、MIT、麻省理工等等。
+
+到底美国的学校在百年以来做了哪些突破性的创新呢？显然在产品上是有创新的，大学的产品那就是这些课程，美国的那些大学在所有的这些课程设计上都有了突破性的创新。
+
+除此之外，他们在那些非产品领域里面也是有很多的创新，比如说它的运营模式就是一个例子，美国的学校有一项创新，在非产品领域的创新，那就是搭建校友的网络。
+
+
+# 三盒创新理论
+
+2.1三个盒子
+
+问大家一个非常简单的问题，在你自己的组织里面、公司里面执行的所有的项目，有多少项目是能够让你成为未来的领导者？我们说战略其实就是领导力的话，换个角度来问大家，这些项目放在三个盒子里面，那么有多少是放在第一个盒子里面的？
+
+第一个盒子，其实就是有关于把控当下，这个其实就是你能够改善你现在的整个业务的情况，这个是有关于你目前的系统怎么样能够进行优化。
+
+有多少你今天在做的是可以放在第二个盒子里面的？第二个盒子，就是有关于你要选择性地忘记过去。
+
+又有多少项目是你现在执行的可以把它放在第三个盒子里面，第三个盒子是有关于创造未来。
+
+第一个盒子，管理现在；第二个盒子有选择地忘记过去；第三个盒子是创造未来。
+
+我发现很多的公司、组织，在和我合作的时候，都是关注第一个盒子，他们觉得这就是在做战略。
+
+战略和过去是没有什么关系的，战略和现在也没有什么联系，战略和第一个盒子是没有关系的，战略其实都是和第二个盒子、第三个盒子相关。
+
+对于第三个盒子来说有哪些挑战呢？比如说你认为在2029年的时候，公司的未来是怎么样的？如果说你想知道2029年会怎么样，那么你就要在第二个盒子这里开始做工作了，也就是说你必须要选择性地忘记过去。
+
+第一个盒子是有关于现在的竞争，当今的竞争，都是一种效率改进。对于第二个盒子、第三个盒子，其实就是对于未来的竞争，都是关于创新。
+
+比如说你2019年，你必须在第一个盒子里面东西要做的非常好，但是你在2019年的时候也要开始去做这种突破式的创新，因为这些东西是和第二个盒子、第三个盒子相关的，只有这样才能够打造未来。
+
+但是，你要做这两件事情是需要完全不一样的人、不一样的技能、不一样的指标，所以这个就是每一个公司所面临的，包括在中国每个公司所面临的战略性的挑战。
+
+我想和大家说的是未来其实是关乎于现在，未来并不是有关于你未来具体做些什么，为什么这个这么难？等于现在你有两件事情能做，一件事情是第一个盒子的事情，第二件事情就是第二个盒子和第三个盒子，你怎么样能够创造未来。
+
+这里面是有本质的矛盾、冲突，所以这对于我们来说都是根本性的挑战。
+
+2.2非线性变革
+
+对于现在项目的竞争，也就是第一个盒子的这些项目，往往就是要去响应信号非常明确的线性变革的东西，因为这是线性变革，并且是信号非常清晰的，所以组织的反应往往就是一种渐进的改进，比如说像质量，或者说持续改善的项目，或者说是质量控制。
+
+但是对于未来的竞争，第二个盒子、第三个盒子的这些项目，往往都是响应一些非常弱的信号，而且是非线性变革的东西。因为你面对的是你行业里面非线性的变革，所以组织的一些响应往往就是必须要指数性创新，非线性创新。
+
+以后技术会颠覆所有的行业，包括你的行业；但是技术并不是非线性变革唯一的来源，也有可能是客户所带来的，未来的客户有可能和你现在的客户是完全不一样的，那么他们也会要求有全新的商业模式；也会有一些非传统的竞争对手到了你这个领域来，逼着你必须要自我改造。
+
+我给大家举个例子，什么叫做客户的改变。它可能会带来各种各样的机会。
+
+比如说你是一个美国公司，不能说我针对美国消费者的商业模式就照搬到印度去，希望这样的话马上就可以抓住印度市场，这是不可能的。
+
+为什么？因为新兴市场代表了客户有极大的不同，新兴市场的客户和发达国家的客户是完全不一样的，所以需要有突破式的创新，需要有指数性创新。
+
+我举个例子，人均收入这个概念在美国是5万美金，在印度是2000美金。你不可能把美国的商业模式照抄到印度。
+
+2.3通用电气案例
+
+我可以给大家举一个例子，这个公司在印度真的做了这种突破式的创新。是通用电气的医疗事业部，它们是专门做医学成像设备的，也就是X光机，或者说超声、CT机。GE是为美国的消费者发明了心电图机，这个是非常强大的一台设备。
+
+心电图2万美金一台，要卖到印度去，那么大概就只能卖整个市场的最富有的10%，至于剩下来的这90%的印度人怎么办呢？这些人是用不起2万美金的这种心电图机的，有各种各样的原因，最重要的一个原因就是太贵了。
+
+当然，还有其它的一些问题。比如说在印度农村地区，医院没有很高级的影像中心。没有影像中心，换言之这些2万的心电图机器都要送机上门，但是这些机器一个单重量就是500磅。
+
+不仅如此，这些2万一台的心电图机器，它只能用一些稳定的电流，就是家庭稳定的电流。但是在印度很多农村地区，要么就是根本没有电，或者有电也是不稳定的，所以没有办法在农村里面来用。
+
+最后，这个机器非常复杂，它只能是有训练有素的医生才能够去操作，一般用户手册就有500多页这么厚，但是在印度的农村地区根本就没有接受过训练的医生，所以导致90%的印度人不能用这2万一台的心电图机器。
+
+2008年，我那时候加入通用电气的医疗部，得到了一个项目，就是要创新一种ECG心电图机器，它的成本大概是100美元，它做一次检查大概只有1毛钱。如果说做一次检查才1毛钱，我一天挣2美元，那我应该还是可以出得起1美元来检查一下心脏的，所以这就是说有支付能力了。
+
+这个百元级别的ECG非常的轻，大概比一罐可口可乐还要轻，那我把它装在背包里面就上路了。
+
+不仅如此，这个百元级别的心电图机器是装电池的，你一次充完电，它可以完成750次检查。
+
+最后，这个百元级别的心电图机器操作起来特别简单，里面只有两个按纽，有一个绿色的，有一个红色的按纽，所以你摁这个绿色的按纽它就启动了，你摁一下红色的按纽它就停下来了，只要你能看懂红绿灯你就会操作这台机器。
+
+所以，GE是把大量的非消费者用这台百元级别的心电图机器转换成了消费者，它就是创新，那我们说了盒子一它是怎么抢夺现有市场份额，但是盒子二和三是创造市场。
+
+2.4孩之宝案例
+
+我们再看一个例子，孩之宝，做玩具的公司，其中有一些像土豆先生、变形金刚，都是它家的产品。但是它们也有传统的那一些桌游，《大富翁》、《糖果王国》这样子的一些传统的桌游。
+
+所以，它们是做什么行业的呢？家庭娱乐。
+
+如果孩之宝想在2019年依然领先，那么1999年就要开始布局未来的项目。他们会选择哪些创新型的尝试呢？要考虑到一些变化。
+
+2.4.1技术方面的颠覆性变化
+
+第一，私人游戏系统、平台的出现。
+
+第二，互联网与无线技术快速发展，并逐渐演变为主流娱乐渠道。
+
+第三，手持数码设备和媒体（照相机，智能手机，平板电脑）。
+
+第四，缩短的产品生命周期以及快速的技术升级，促使游戏技术承受价格下跌造成的巨大压力。
+
+2.4.2用户的变化
+
+第一，年轻一辈的小孩，随着年龄增长，会更早地对传统玩具失去兴趣。
+
+第二，人口老龄化的趋势也让爷爷奶奶辈的消费者占据了很大的比重；他们常常“亲自”陪孙儿辈的孩子玩耍。
+
+第三，成年人发现他们有机会在社交、工作环境中玩游戏。
+
+第四，逐渐增长的“少数人群”迅速占据主要地位。
+
+2.4.3销售渠道方面的变化
+
+第一，大卖场出处现带动了零售集中化，顾客可以不去拥挤的小型商店和精品直销店。
+
+第二，大型零售商店推动了规模经济，对供应链一体化有很高的要求。
+
+第三，大型零售商还会出售自有品牌产品。
+
+第四，“老牌”竞争对手的破产引发了更深层次的零售集中化。
+
+2.4.4竞争对手方面的变化
+
+1995年只有一个竞争对手美泰，现在因进入壁垒低，游戏相关的竞争对手无处不在。
+
+2.4.5生活方式方面的变化
+
+第一，家庭成员之间在一起娱乐的时间减少。
+
+第二，娱乐的年龄分化更加严重。
+
+第三，父母都工作的家庭与孩子一起娱乐的时间更少，但这样的家庭会花费更多的钱在儿童娱乐上。
+
+第四，父母更喜欢有丰富内涵的玩具和游戏。
+
+第五，许多孩子的时间都被安排得很满，少有闲暇时间；所以他们在娱乐时间，往往喜欢一个人玩快节奏的电子游戏。
+
+2.4.6人口结构方面的变化
+
+到2030年，美国40%的人口是西班牙裔，他们的娱乐方式与美国白人不同。
+
+2.4.7全球化趋势
+
+第一，新兴市场具有增长潜力，在这种新兴市场中，娱乐的概念不同，并且一次性收入很低。
+
+第二，在新兴市场，新的产品设计方法、制造工艺、与市场营销手段都将需要克服文化、市场、以及物流的障碍，因此，西方企业需要打造新的竞争力。
+
+第三，成熟市场的发展潜力可以通过现有的竞争力去释放。
+
+所以，有很多非线性改变，对于孩之宝来说是能够有创造第二个盒子、第三个盒子的机会。那么对于孩之宝来说，第二个盒子的挑战是什么呢？其实第二个盒子是有关于如何忘记，如果说你不能够忘记的话，你就没有办法学习。
+
+2.5如何忘记
+
+三个盒子中，其实最难的就是第二个盒子。
+
+第二个盒子是关于选择性地忘记，也就是说也要选择性的记忆。我非常喜欢这里打一个比方，每一个组织都有它的根，不能把它全都切掉，所以你得先搞清楚自己公司的根是什么，想办法把它保护起来，并且能够给它滋养的养分。
+
+但是，很多的组织又好像牢牢抓住自己的过去不放，这些枝链要想办法能够忘记。所以对于孩之宝也是一样。
+
+1995年的时候孩之宝应该忘记什么。如果说孩之宝的高管层他们现在要来回答这两个问题，在我这个行业里面，在未来20年有哪些非线性的变革，因为有这些非线性的变革，那么对于第二个盒子来说我现在面临哪些挑战？
+
+<img style="width: 100%;" src="https://yxs-web.oss-cn-beijing.aliyuncs.com/4a32656058d47d4873d3d967d4d5f8aa.png">
+
+让大家去想象一个未来，其实就是在问你的假设是什么，在未来20年，非线性的变革是什么样子的。
+
+另外，这些假设并不是说你凭空想出来的，往往是基于一些比较弱的信号，在第一个盒子里面你是得到非常明确的、强的信号，然后在第三个盒子里你响应的是非常弱的信号，这些弱的信号你接收，然后你去做假设，这种非线性的变革未来是怎么样的。
+
+什么叫做弱信号，1995年的时候大家开会，是没有办法去预测苹果公司在2007年的时候会推出苹果手机——一旦推出了iPhone之后，就等于上面有很多的游戏了，你当时是不可能预测的。
+
+但是，会有一些非常弱的信号，在90年代中，可以接收到，然后你就可以做一些假设。比如说这种技术的游戏是在未来有非常大的机会；个人电脑的革命在80年代就出现了，这也就意味着成百上千万的人都有电脑了；另外在90年代，摩托罗拉已经推出了一款手机，当然是非常笨重的，但是至少已经有人展示出来了；90年代互联网已经出现了，当然这是比较早的阶段了，这也意味着这些电脑相互联结在一起； 1991年，雅达利已经推出了视频的游戏，你就可以用技术的手段打游戏了。
+
+所以孩之宝在过去20年做了很多的商业模式，他们也是要进行转型，从实物的游戏玩具变成了数字的游戏公司。另外，对于新兴市场，它也非常强，在中国可以看到《变形金刚》的电影非常流行；IP体验也不错，像变形金刚，现在不单单是有实体的玩具，还有电影，还有主题公园。
+
+在2019年孩之宝之所以做的非常好，是因为它其实从90年代就开始做这些工作了。所以，我说现在就是未来，我和大家讲的所有的这些东西都很容易理解，为什么做起来那么难呢？
+
+2.6跳高案例
+
+我可以和大家打一个比方。奥运会是1896年的时候开始的，所以我们有过去100多年的数据了，看一下奥运会跳高金牌得主。第二个盒子和第三个盒子，其实就是在跳高的方式上进行了突破式的创新，马上成绩就上去了。
+
+第一种是剪式跳高，如果说你是跳高的人，就是遵守剪式跳高的规则，想办法在剪式跳高里面做到最高，这个就是你第一个盒子做的事情，持续提高剪式跳高的高度，这个都是有关于经营的提高、运营的提高。
+
+这个其实说白了就是第一个盒子的工作。这个重要吗？当然很重要了。但是2019年你不能够将所有的资源都用于剪式跳高的成绩，因为世界肯定会发生变化，这种突破式的创新总是出现的，新的竞争对手会进入到你的领域，逼着你要改造自己。
+
+在2016年里约奥运会，跳高运动员是跳了8英尺，如果说你是用剪式跳高法的话，你是不可能跳到8英尺的。因为在整个的剪式跳高中，你的重心高度决定了你能够跳的高度，如果说你充分发挥你的潜力，你得找一个新的方式能够让重心提高，于是后来就出现了滚式跳高、俯卧式跳高，在这之后，出现了这种背越式的跳高，等于突破你重心的潜力往上跳。
+
+公司也一样。比如说在你的组织里面有很多跳这种剪式跳高的人，但你必须要花一些精力、资源，然后要把它放到第二个盒子、第三个盒子，去做突破式的创新，这个是我们所面临的核心的挑战。
+
+另外，我希望大家来看一看你们做的所有的项目里面，有多少是放在第一个盒子里面的。第一个盒子其实就是要不断去缩短你的这种绩效的差距，但是不能把100%的资源全都扔在第一个盒子里。要问一下你有多少个项目是放在第二个盒子里面、第三个盒子里面，这里面要缩短的是可能性的差距，要做非线性的创新，要做突破式的创新。
+
+3.绩效差距和可能性差距
+
+如果说想在2029年的时候成为一个领导者的话，那么有两个挑战。第一个挑战是什么？我们必须要去缩短绩效差距，第二个就是我们必须要缩短可能性差距。
+
+我和很多的公司进行合作，我就发现很多的公司将资源都花在怎么样去缩短绩效差距。另外，怎么缩短绩效差距？比如说最佳实践标杆，这个东西并不是什么战略。比如说你做剪式跳高，你对标什么呢？你就看看其他人，在做剪式跳高的这些人，有没有谁做剪式跳高比我做的更好一点？或者说做更聪明一点，然后看看和他之间的差距是多少，然后你就做项目了，这是在想办法缩短绩效的差距。
+
+那么，最终你做出来会是什么样呢？你的可能性在哪里？ 100块钱的ECG机器并不是对标最佳实践标杆做出来的，背越式跳高也不是这种线性的提高，而是完全是一种非线性的创新。
+
+如果说你要再找这种例子的话，我们来看一下这个小微贷款案例。尤纳斯， 1993年的时候他成立了格莱珉乡村银行，在那之前他是教经济学的教授，是在孟加拉国大学。
+
+大家也知道，孟加拉国有很多的饥荒，1988年的时候饥荒，其中166个村民奄奄一息了，其实他们需要的都是25美元的贷款。尤纳斯博士看了看自己的口袋，给了这些村民25美元的贷款也得到了还款，而且还附带10%的利息。所以，他能够把这166个非消费者转换成银行业的消费者。
+
+后来他就开始问自己了，借钱还能够得到一定的盈利，要是把更多的非消费者，我把那50亿世界上的人口，现在还没有用银行业务的人，我给他们转换成消费者多好。所以，他们现在成立了一家乡村银行，叫做孟加拉国乡村银行，跟现有的这些银行完全不同的规则。他一共发放的贷款达到了200亿，他其实每一个都很小微。在过去的30年时间里面，孟加拉国乡村银行也是世界上盈利最高的前30家银行之一。
+
+4.战略架构
+
+中国在过去的30年创造了很多价值，如果在接下来的20年中国还要成为进一步伟大的国家的话，我们必须要有突破性的创新。
+
+怎么才能够突破性创新？我们必须要改变战略。
+
+我到企业去的时候，都会请求他们给我看战略规划，企业经常给我一本厚厚的册子，这个战略是没有意义的，因为未来是不可能去完美预测的。
+
+所以，针对未来做规划其实没有意义，但是为未来做好准备是非常重要的。我有一个工具，是为了让我们更好地为未来做准备，就是战略架构，这个战略架构应该就是一页纸，非常简单。
+
+如果哪一天你可以化繁为简，把所有的战略浓缩成一张纸上，全公司的思想就可以统一了。
+
+它里面有几个重点。
+
+第一，未来会变，所以你会对未来有哪些假设？在我们这个行业里面，比如说会存在哪些颠覆性的技术，会有哪些非消费者变成消费者，竞争对手、人口、生活方式各个方面会有怎样一些变化？
+
+反思一下你现在看到的一些信号，你关于这些问题做出的这个假设在未来会有哪些变化？我们要去收集这个证据，去验证这些假设，有的假设可能就不成立，那你就需要去推翻，要重新建立新的假设。
+
+第二，战略架构的重点在于战略意图。不是说能够保证未来的成功，但是好处就是有一个明确的方向，就是一个可视化。
+
+第三，我现在的这个核心能力是什么？
+
+第四点是最重要的，年度重点，就是接下来这一年，12个月，我的资源怎么样去配置，你当然不能把百分之百的资源配置在盒子一上面，资源必须是分配在3个盒子里面，这就是意味着你要有几个不同的视野。第一个视野是短期的，盒子一，这边我有一个经验法则，大概40%到60%接下来12个月的资源应该配在盒子一的这些项目上；然后，视野二和视野三这就是代表着盒子二和三，但是视野二和三之间的区别就是，和二相比，三的风险更大一些。比较接近核心的那一些项目就是视野二，把这个资源配在这一些东西上面，因为它的风险低，我的经验大概是25%-30%的资源放在视野二；视野三就是更有颠覆性、更加的高风险的项目，10%-20%的资源放在视野三。
+
+第五是新的核心竞争力。不能总靠现在的这些能力去掌握未来，所以我要去建设打造这个核心的竞争力。
+
+再强调一下，战略意图必须达到三个方面的标准。
+
+第一个标准是方向。第二个标准就是动力、热情。可以这么来想，员工你光给他定一些财务上的KPI，这是不可能激发他的热情的，要有让这个员工迫不及待想要来工作的理由，这是战略意图第二个标准。第三个标准就是挑战，战略意图必须是大胆的，是充满勇气的，一定要有大梦想。
+
+这是战略意图的三个关键，方向、动力和挑战。
+
+有一个非常好的例子，在60年代的时候，约翰肯尼迪说了这句话：我们要在这个10年结束之前把人送上月球，并且安全返回。这是一句非常强大的意向，我们来对比一下刚才这三个标准。
+
+方向，人类登上月球，方向很清晰。
+
+动力，那时候美苏大战，60年代的时候我们要打败苏联，那时候苏联在太空已经是取得了一些进步，走在美国前面。成为世界霸主，是非常能够让人热血沸腾的。
+
+挑战也有。那时候成功的概率是10%，所谓的战略意图就是要有一个大大的梦想，要有一些看似不现实的目标。
+
+所以，我想给大家的一个作业就是，回去以后看看你们的企业，按照我说的这三个标准的战略意图，还有这5点战略的架构，你能不能写出来。
+
+另外给大家准备了两个工具，帮助大家更好地使用三盒创新理论。
+
+<img style="width: 100%;" src="https://yxs-web.oss-cn-beijing.aliyuncs.com/5e546bb67a8ba41743af72cc7f4d8769.png"><img style="width: 100%;" src="https://yxs-web.oss-cn-beijing.aliyuncs.com/fb85e1a2130f742ac65086cc1827e9c0.png"><img style="width: 100%;" src="https://yxs-web.oss-cn-beijing.aliyuncs.com/5ef92cd8aca16b49e78a5936380855a7.png">
+
+下节课我想给大家讲两个非常重要的三盒创新理论的应用，就是中国如果接下来100年还希望继续领先的话需要掌握的，谢谢！
