--- a/_posts/2019-06-03-377-mba1302.md
+++ b/_posts/2019-06-03-377-mba1302.md
@@ -4,4 +4,143 @@ title: 第2节 逆向创新
 pid: 377
 tags: [MBA]
 ---
- 
+
+# 逆向创新导论
+
+1.1什么是逆向创新
+
+什么叫做逆向创新？从传统上来说，一般都是美国这样的富国创造产品，然后卖到像印度这样的穷国。逆向创新恰好就是倒过来做，也就是说在一个穷国创新，比如说在印度，然后将这个产品卖到像美国这样富有的国家。
+
+逆向创新是反直觉的，为什么？穷人羡慕富人，这很合逻辑，比如说富人开车，那么穷人也想开车。反过来，富人羡慕穷人就显得非常不合逻辑。
+
+对于中国还有中国的公司来说，逆向创新是一个非常大增长的机会。
+
+1.2逆向创新为什么发生在穷国或新兴市场国家
+
+有三个原因能够来解释为什么逆向创新发生在穷国或新兴市场国家。
+
+首先第一个就是我们所说的性能的差距，一般来说在GE有三个不同档次的产品，比如说像超声或者ECG，往往是有三类产品，比如说100美金的，然后是90块钱的，90块钱的就是90%的性能，100块的是100%，80块钱的是80%的性能。
+
+然后，GE来到印度，他们也知道印度是穷国，然后把它变成比如说70块钱的东西，但是你也只能做70%的性能了。
+
+但是，哪怕是这种产品，也只有10%的印度人用得起，90%的印度人希望你是5块钱，但是你能给我50%的功能。
+
+你打造这样的一个产品之后，这个产品其实又可以在美国进行销售，因为在美国的话，也有人可能需要这样的产品。
+
+第二个，就是基础设施的缺口。举个例子，比如说美国的能源行业，美国100年前已经集中建立了一些大的电厂，然后用国家电网来输电。但是新能源接入现有的基础设施非常不方便，所以美国在新能源方面就做的不好，因为一旦利用新能源的话，美国现有的这些基础设施就没用了。
+
+但是，在中国是没有这种局限性的，中国的电网非常新，所以中国在新能源方面可以弯道超车，可以建最新的，比如说建太阳能电厂、建风电厂。
+
+第三个问题，叫做监管的差距，中国和印度他们并没有像美国那样严格的监管。有监管当然是好的，但是太过于严格的监管就会扼杀创新，比如说在印度，医疗行业监管并不严厉，所以人们愿意去尝试不同的东西，但是在美国监管极其的严格，所以很多时候创新就出不来。
+
+所以，逆向创新很多时候都是在新兴市场出现，因为可以弥补在性能上面的差距、基础设施的差距、监管上的差距。
+
+# 逆向创新的秘诀
+
+印度医疗的逆向创新极大程度上改变了美国的医疗。美国的医疗行业花了大量的钱，看病非常贵，质量还未必是全球最好的，另外还不能够保证每个人都有医疗。
+
+印度有12亿人口，但是非常缺少医生和医院。怎么办？只有有突破式的创新，这是唯一的方式。
+
+中国也必须要做突破式的创新，才能够释放潜力，如果这么做的话，其对于中国以外的地方也是有价值的。中国为什么要这样做，有两个原因，一个就是在中国本身有很多的非消费者，要把这些非消费者转换为消费者，必须做出低成本高质量的产品。在中国成功后，产品也可以卖向全球。
+
+印度的Devi Shetty医生，他成立了一家医院叫做Narayana医疗集团，这个医院的开心手术只要2000美元，而相同的开心手术在美国的价格是要15万美元，两者之间大概差75倍，然而，这家医院的手术30天内死亡率是1.2%，美国是2%。这意味着逆向创新并不是低质量的创新，而是不断提高性价比。更加反直觉的是印度的那些非消费者，他们对质量的要求实际上要比美国消费者还要高。
+
+开心手术的确就是如此，印度的医生需要掌握的技能比美国的医生还要高，为什么呢？因为从遗传的角度上来说，印度人的心脏比较脆弱，所以印度的医院的医生就需要掌握更高超的技能，而且印度污染还是比较严重的，卫生的条件跟美国相比也是非常糟糕的，换言之手术后的死亡率也应该比美国更高，然而事实正好相反。
+
+如果你是为富人设计一个产品，那穷人就消费不起，如果你能够为穷人设计一个产品的话，那大家都支付得起。这就是逆向创新的能量。
+
+这家医院成功的秘诀到底是在什么呢？主要是以下三点：
+
+第一，辐射枢纽模型。
+
+第二，任务转移。
+
+第三，勤俭节约。
+
+Narayana医院位于班加罗尔，而班加罗尔是只是它的一个枢纽、中心，它在印度国内有500个辐射点。这些辐射点只有一些最基础的仪器、医疗人员，做一些初步的筛选，由辐射点来决定是否需要去医院动手术。
+
+而所有最好、最贵的仪器和最好、最贵的大夫都集中在班加罗尔。
+
+各地的基础医疗中心只做一些筛选，看是否需要接受手术，如果真的需要做手术才送到班加罗尔，这极大地降低了成本。
+
+这套系统还有一个好处，就是它保证一定的供给量，500个辐射点可以源源不断地向总部供应需要做手术的患者。而海量的手术，可以通过规模经济效应，使得成本大幅下降。
+
+在医疗领域，你完成的手术量越多，你就越保留在前沿，你就越能够掌握娴熟的技术。
+
+所以，这是它的秘诀所在，高质量、低成本，再对比一下美国的医院是如何运作的？实际上美国的心脏手术数量还是最多的，问题是太分散，都分散在不同的医院里面，所以每一家医院承担的手术量是很少的。
+
+第二个，任务转移， Narayana医院的医生只做开心手术，剩下非核心的任务全都是由基础医务人员来完成，而这些基础医务人员大多是农村女孩通过培训上岗的。她们做这些日常的工作可能要比医生完成的更好，因为如果让眼科医生去做一些小事情，比如说检查眼压等等，他会觉得很无聊，很枯燥，但是这些女孩子工作非常的有热情。
+
+这种任务转移还可以变成自助服务。有一种免费资源的就是家属，比如说在开心手术结束之后，给家属看4个小时的护理视频，这些家属他就知道了应该怎么护理，这不单单是减少了成本，另外回家之后，家属也就能够继续的去护理病人，这样的话再次入院的比例就急剧的下降了。
+
+对比一下Narayana和美国医院之间的差别。美国医院的任务转移完全做错了，比如说医院想降成本，他们会先炒掉低技能的员工，结果让高技能的的医生去量血压，去记录文件，所以不单成本没降下去，质量反而下降了。
+
+还有一点就是要勤俭节约，印度这些医疗集团都是非常勤俭节约的，想方设法，只要在不影响质量的情况下，能够尽可能的节约。所以，医院里面的家具都是挺破的，只有手术室是有空调的，其它地方都没空调。医生的办公室也很简陋，但是你看美国的医院，就像一个七星级的酒店。
+
+在印度有些地方的医疗器械是重复使用的，当然了，这也是有非常严格的消毒过程的。比如说做开心手术的时候，必须要有一个夹子把心脏固定起来，这个铁夹大概是360美金，印度医院会用100次，这样的话每一次使用就只有3.6块美金。但是在美国这个铁夹每次用完就扔掉了等于说用一次成本就是360美金。
+
+另外，每天早上医生来的时候，医生都会看一看之前一天医院损益情况怎么样，医生打开手机，他收到的第一个信息就是昨天这家医院的收益情况怎么样，比如说昨天一个心脏手术的成本是多少钱，比如说昨天你这个开心手术是3000美金的成本，然后还会告诉你其它的手术是多少钱。
+
+这样的话医生时刻都是要想着我怎么样能够降低成本。但是在美国医生肯定不知道成本是多少，只有会计知道。印度医院就像丰田一样，丰田将成本信息都告诉工人，工人才有动力想办法去降低成本。
+
+这些医院的创办人既是医生，也是企业家，是商界人士，是慈善家。他们为什么能成功呢？有三点非常重要：一是过硬的医疗技术、二是富有热情和同情心、三是具有商业头脑。
+
+这三者结合在一起使得他们获得了成功，所以我们把他们叫做具有社会责任感，但是又有商业头脑的人企业家。
+
+这家名为Narayana的印度医院，在开曼群岛开了分院。这是一家有2000张病床的专业开心手术的医院，可以说是全球最大的心脏病专科医院，从美国迈阿密到开曼群岛只需要飞一个小时，这个医院它针对的是美国病人，美国患者只需要用极低的价格做开心手术，然后在手术三周之后，你就可以享受开曼群岛美丽的沙滩。
+
+所以，创新的力量，甚至在一个很贫穷的国家做的创新，也能够复制到美国，这对于中国来说，其实是非常好的一个例子，中国当然比印度要富有的多，但是在中国还是有很多的非消费者，要把非消费者变成你的消费者，就要做盒子三的创新，如果说在中国可以做出来，那么在全球都可以得到应用。
+
+另外，中国的公司有非常强的技术能力，为什么不去到更贫穷的国家或者非洲？非洲有那么多的非消费者，你也可以用你的能力释放非洲的市场，如果你可以释放非洲的市场的话，你就可以释放全球的市场，因为全球都需要你的产品。
+
+# 泰国的逆向创新
+
+再给大家举个例子，不单单只是印度，在泰国，有一个J医生，他也是医学博士，他的医学学位是在西北大学医学院获得的，所以他非常了解美国的医疗体系，他想给泰国的这些截肢患者装上假肢。但是泰国也是很贫穷的国家，就像印度一样，而一个假肢要2万美元，所以泰国患者根本装不起。
+
+但是，这并不意味着泰国的这些截肢患者不需要假肢，所以这些非消费者和消费者有一样的需求，一样的梦想，但是他们需要一个极低价格的产品。所以如果你能够去做这方面的创新的话，就能够释放大量的市场潜力。
+
+J医生决定要做一个30美金的假肢，30美金的假肢并不意味着质量就非常的差。他希望做一个和美国人装的假肢一样质量的产品，美国的话卖2万，在泰国30块钱，这就是盒子三的创新。
+
+前文提到，非消费者往往需要更好质量的东西，比现有消费者质量更高的东西，对于开心手术是这样，假肢也是一样的，为什么？我们来这么想，比如说在美国，我有一个假肢，我是可以走在非常平稳的马路上。但是在泰国，我走的是颠簸不平的道路。另外，泰国人有一些非常奇怪的习惯，比如美国人做不出来的“亚洲蹲”，如果说你一直在街上这么蹲着的话，其实对你的假肢是会有很大的影响。另外，在泰国90%的人他是务农的，农田都是坑坑洼洼的，然后你现在装上了这个假肢，你在农田里面走，这个假肢有可能会陷在泥里面。
+
+然后，你再想一想，在这样的情况下，这个假肢受力会有多大。在美国，骑车是一项爱好，在泰国，骑自行车就是为了养家糊口。很多美国人大概也就骑个半个小时，这是他们的一个爱好。但是泰国人骑车是为了挣钱，他们一天大概要骑自行车骑18个小时，如果你是一个泰国的截肢人士，装了假肢以后，想想你在这条腿上要施加多大的压力。
+
+所以，杰医生他不仅仅是要打造一种假肢，而且它的质量要比美国的高很多，与此同时价格要做到30块，如果能做到的话，你就可以去获得大量的需求。
+
+所以，杰医生做了两项创新，所以他的假肢是能够做到质量更高，而且价格只有30美元。第一个，美国假肢用的原材料是很贵的，比如钛。当然了，如果预算只有30美元，你可用不起钛。所以，他用回收的酸奶盒做原材料，成本等于0。
+
+而且，、这个30美元的假肢是非常轻的，又好用，又舒服。
+
+第二项创新是安装的过程，在美国我们是要用非常复杂的流程才能够去安装你的义肢，这个过程又贵又复杂，而且它要花好几个周的时间才帮这个患者对接安上。但是，杰医生30美元一个假肢可请不起昂贵的医生，甚至在泰国都没有这样的医生，因此他的突破性创新就是去训练这些截肢人士，让他们去为别人装假肢。
+
+这些泰国截肢的技术人员实际上他们装的技术特别的高超，可能比美国的那些专业人士还要好，为什么？因为首先他们不仅仅把这个当一份工作来做，他们认为这是神赐予我的一份神职，为什么？因为我的这条腿已经回来了，那我就应该要去回报这个神，所以他视为一份神一样的工作。
+
+而且，他们自己是过来人，所以他知道怎么装可以不疼，他知道怎么样装可以动作更快一点、更准确一些，因为他自己是过来人。与此同时，这些截肢的技术人员他可以很好的把那些非消费者转换成消费者，就比如说就有一个人他说我在货架上看到2个假肢，一个是2万美元，一个是30美元，我为什么要买30美元的呢？然后他就说30美元的好，就装在我身上呢，30美元的特别好。
+
+所以，这就是逆向创新的力量，我们面前所存在的机遇，30美元的假肢现在已经进了基尼斯的记录。我们可以坚信，每一个行业，无论是医疗、教育、能源和交通，只要你能说得出来的行业，都可以受到逆向创新的冲击。
+
+# 住房的逆向创新
+
+再给大家举一个例子，住房。现在地球上有3000万流浪汉，这相当于是英国一半的人口。住房是一项基本人权，所以，在5年以前，我在哈佛商业评论上面写了一篇纯概念性的文章，我就写说我们难道不能建一个300美元的房屋吗？给这些流浪汉。我说这300美元的给穷人的房子应该也是一个很过得去的房子，然后在这300美元的房子里面，我们应该也要有非常好的医疗治疗、教育和正常的工作。
+
+那大家可能不禁要发问，怎么才能做得到呢？医疗不仅仅是在医院里面才能体现，还体现在你对房屋的一个设计和建筑上，现在这个地球上有3种流行病，杀掉了很多穷困国家的人，有肺结核、疟疾、霍乱病。
+
+这三种疾病跟房屋是很相关的，比如说一个草屋，里面10个人打通铺，一个人有肺结核，其它9个人也不能幸免。所以房屋必须通风好。
+
+另外，还有一个就是霍乱病，它是和水相关的，水传染的，所以房子需要保证基本的卫生条件。还有疟疾也是一样的，它是蚊虫来传播的，我们能不能通过这个300美元的住房来降低疟疾感染？所有这一切其实花不了太多的钱，我们只是需要有盒子三的这种创新思维。
+
+还有教育，教育不仅仅是只有学校才提供，还有也体现在这个房子的设计和建筑上，比如说现在像在海地这个国家是没有电的，也就是说一旦太阳落山了以后，整个国家就陷入了黑暗，你能想象吗？50%你的生活就是生活在黑暗当中，海地的儿童太阳下山了就做不了功课。
+
+所以，我就提出一个挑战，你为什么不能够有一个300美元的房屋来给大家提供电呢？这样子孩子就可以好好的学习、读书。
+
+所以，我们为什么不能够用更少做到更多呢？300美元的房屋它就是用更少做到更多。而且300美元的房屋不能做成慈善，慈善它是不可能规模化的，我们需要用商业的运作去做这些事情，那么企业什么时候才能够被撬动呢？只要有盈利的机会，如果说你在30块钱的义肢、在300块的房子上能够赚钱，企业才能够去出动。所以现在我们说有这么多的人没有好的住房，那么50亿人没有好的住房，你只要把握其中的10%那就是这个5亿，所以就是每个人300美元的房屋，那你就可以挣几千亿。
+
+这当然知识从概念上去探讨，我想给大家提出的挑战就是不要从我们现在的房屋概念开始，不要什么两房两厅还需要带浴室的。假使现在大家全都刚刚登陆到火星上，我们啥也不知道，需要从头来过。
+
+非常让人意外的是我写的这一篇文章引发了各方的关注，最后还有人请求我再去做更多的研究，所以我建了一个网站，放在社交媒体上，大家也可以看到。
+
+后来有2万5000多个人加入了我打造的平台，他们都是教授、设计师、工程师，都是和房屋建筑相关的。有了这么大的一个平台，我说我们一起来号召举办一项全球的竞赛，我们选了6个胜出者，然后我在达特茅斯的大学也给他们进行了一些指导，这6个竞赛的胜出者也提出了一些方案，其中有一个方案是来自于马衡达，这是印度的一家企业，他们把方案投入了印度市场，为印度的两个村落盖了房子。这就是逆向创新的力量所在。
+
+对中国来说，首先国内就有大量的非消费者，我们怎么样才能把他们变成消费者？就是通过盒子三的创新，这是第一步。第二步，你可以走出去，带着你的战略走出去。
+
+第二层的战略思考，我觉得中国还是比较发达的，除了中国以外，世界上有大把的贫穷的国家，太多的穷国了，整个非洲大陆就是很贫困的，还有印度大部分地方，泰国、越南都穷，所以我们为什么不把这些国家作为一个项目的目标，然后拿自己的能力过去建设？
