--- a/_posts/2019-06-03-378-mba1303.md
+++ b/_posts/2019-06-03-378-mba1303.md
@@ -4,3 +4,265 @@ title: 第3节 数字化转型
 pid: 378
 tags: [MBA]
 ---
+
+中国企业可以做的一件盒子3的事情，除了逆向创新，还有数字化转型。
+
+1.数字化转型 
+
+1.1数字化转型的GE案例
+
+什么叫做数字化转型？
+
+举个例子，比如传统的通用汽车内燃机（用汽油），是通用盒子1的项目。
+
+盒子1怎么来构建？
+
+首先设计这款车，大概是一次重新设计，要花20亿（花6年时间），内燃机汽油传统汽车，打造一个全新平台大概需要6年时间。
+
+第二，要建立一个厂，这是一个非常复杂的、多功能、综合性的工厂，因为内燃机有好多零部件，是非常复杂的组装厂。
+
+第三，市场营销。
+
+第四，把车子放到渠道里（4S），消费者可以去买车。4S店负责汽车维修，因为汽车内燃机等有各种各样需要做的保养。
+
+所以这是传统的汽车行业。
+
+数字化转型，汽车领域是如何来考虑？有三种颠覆的技术，为盒子3的创新打好了基础。
+
+第一，电力驱动。通用汽车推出了雪佛兰Bolt，也是电动车。
+
+第二，人工智能。通用汽车现在把赌注放在了自动驾驶，现在有一个事业部专门做通用汽车电动车自动化。
+
+第三，移动技术。移动技术使得我们要做共享（滴滴、Uber），通用汽车现在也是进入了共享经济、共享服务，有一个来福车。数字化转型是一次非常大的盒子3的创新，为什么呢？如果你是现在来做共享汽车（滴滴、Uber）你不会再去问这样子的问题，这个车子是什么品牌。你不会去问车子的品牌了，因为我现在需要从北京国际饭店到机场去，你打一辆滴滴无论来什么牌子，你就坐呗。
+
+所以，在共享经济当中，品牌这件事很大程度上就无所谓了。
+
+为什么像通用、Google和特斯拉这样的公司，花了好多钱去投无人驾驶汽车？
+
+因为像现在滴滴、Uber每次坐车大概70%、80%的收入给司机，但是自动驾驶汽车公司里面没有司机了。这样子公司的盈利就可以冲上顶端了，因此这些公司大力投资去做无人驾驶汽车。无人驾驶核心竞争力在于计算机科学。
+
+如果说汽油（传统汽车）核心竞争力是机械工程，所以我想说数字化，全面对汽车领域进行了一个转型。因此中国企业来说，数字化转型是非常、非常关键的，第二次盒子3的创新。
+
+就像大疆，大疆是做无人机，无人机是硬件，但大疆也是一个人工智能公司，因为它有软件，软件是搭配，硬件一起来使用，所以我们可以说大疆是数字化公司（软硬件的整合）。我觉得中国企业可以取得卓越，我们可以做一些高科技的制造。
+
+我们现在也在人工智能、大数据软件方面打造自己的优势，可以很好来相辅相成。汽车领域不仅仅只是软件，无人驾驶汽车，车子还是在那儿，我们只是说要让这个软硬件去进行整合，这是接下来的一个机会点。
+
+1.2数字化转型带来的新机遇
+
+数字化转型怎么样给我们带来盒子3的机遇？
+
+数字化转型要创造价值，有三个条件：
+
+首先，重新定义规模的概念。在工业领域当中，企业以前怎么来增长的？扩大规模。我说的工业领域，20世纪初工业时代（通用汽车、通用电气、宝洁）所有这些公司，怎么来打造自己的竞争优势？通过放大规模。对于20世纪早期，通用汽车怎么来做规模？基于销售的汽车数量，所以这就是市场份额的博弈。
+
+**我们可以增加市场份额、增加市场占有率来做大做强，这叫做规模。但是工业时代当中，这种规模永远是渐进式的。**为什么？因为你如果想要去提高生产和销售数量，必须要建厂。你想要卖更多的车，要建厂、4S店（渠道）都要花时间，所以规模是以前工业时代当中企业的增长模式。
+
+第二，范围。就像宝洁，本来是做洗衣粉的，现在做婴儿纸尿片。这就是范围，对于宝洁来说，我们生产多少种不同的品类。规模是单一的品类当中数量增长，这是规模和范围的不同。
+
+但是范围的增长，也是渐进的。为什么？因为宝洁再怎么扩大品类，也不能去做汽车，所以只能到一些相邻近的，能够利用自己核心竞争力的品类。比如说宝洁的核心竞争力分销，特别清楚怎么样渗透到超市里。原来洗衣粉进超市，现在只不过多了一种相似的品类。
+
+规模和范围，这是工业时代里两种企业的增长模式。但数字化转型，可以从一种突破的方式来做规模和范围。**在数字化时代，销量看你所属怎样的生态系统，规模可以指数型去增长。**原先要靠一辆一辆车去生产、去卖，所以要靠有多少工厂、多少4S店，但是对于Uber（滴滴）来说，规模是看自己网络当中有多少辆车；所以滴滴的增长远远大于传统的车企。
+
+比如说，万豪在酒店行业有50万间客房，花了几十年的时间。Airbnb，2009年才刚刚出现，仅仅过了10年，就有550万间客房。因为在数字化时代，我们看所谓的规模，看你所属怎样的一个生态系统。相似的，基于范围的增长在数字化时代，也是超速可以实现。
+
+我们前面说工业时代的范围增长，你只能到相似的品类。现在你可以几乎进入所有行业，比如说苹果Iphone，上面有Itunes，所以苹果一下子进入了音乐行业，跟它们去竞争；还有一个APP拍照的，苹果一下子和那些照相机公司竞争了；还有一个APP Pay，又和支付公司、银行去竞争了；还有一个健康监测APP，苹果一下子和医疗相关的产业竞争了。
+
+所以，数字化时代，企业的核心在于大数据、在于软件、在于人工智能，这几乎可以应用于任何行业。因此现在的范围，也不是传统概念了，可以是超速扩大范围。
+
+我以前去麦当劳，看到一块牌子，上面说：我们已经卖了100万个汉堡包了，我们卖了1000万个了，卖了10亿个汉堡包了。这就是我们说的工业时代增长，看你卖多少个汉堡包。
+
+**数字化企业不会去算，我现在到底卖了几个汉堡包，是算谁在吃汉堡包。只要他知道谁在吃汉堡包，就可以卖更多的产品。**
+
+最近我遇到了一家保险公司CEO，他说，我们有一个数字化战略？我说，你是怎么样的一个战略？他说，我建立了一个保险公司的.com，这不能算是数字化，只不过多了一条分销渠道。使用互联网作为工具而已，这不是数字化的战略。因为你还是想要卖他汉堡包，你也不知道你的客户到底是谁。数字化的企业非常了解客户，了解的程度可能超过客户本身，所以他们能够给到这些客户越来越多的产品和服务，也从根本上改变了商业模式。
+
+1.3反思商业模式
+
+**商业模式的定义，回答这**几**个问题：我的用户是谁？**用户**寻找何种价值？如何传递价值？需要何种竞争力？我们的竞争对手是谁？**
+
+那么数字化的技术，从根本上（软件到硬件）改变商业模式。
+
+这里有一个例子。通用电气的飞机事业部卖飞机的引擎发动机，卖给新航、英航、阿航等等。他们卖发动机当然卖硬件（发动机本身），但是硬件里面肯定是嵌入软件的。因为发动机要和机长沟通，软件不另外收钱，软件变成是锦上添花，免费赠送。只要你买硬件，但其实靠什么挣钱？靠售后服务的合同。因为买一台发动机，大概用25年。所以你买一台发动机以后，像英国航空，还是需要找GE去做维修、保养等等，这个服务合同是赚好多、好多钱的，这也是通用电气飞机的商业模式。
+
+我们说数字化的技术，能够从根本上改变商业模式，这可能除了逆向创新以外，我认为中国企业面临的最大机遇。因为我们现在非常擅长做生产，但可以改变商业模式。
+
+GE发现飞行器引擎燃料效率每提高1%，航空公司利润每年可以增加20亿美元。也就是说，发动机燃料的效率提高1个百分点，航司利率每年增加20亿美元。我们可以利用一些数字化工具，产生优质的结果。
+
+怎么样才能够用数字的工具，来提高燃料的效率呢？通用解决方法是装传感器。装了传感器在发动机上，可以产生大量数据。
+
+比如说，一架飞机美国飞到北京，一次性飞行，产生几百万、上亿的数据。不同速度下面的燃料效率，还有根据高度的不同，燃料效率等等。一旦你收集到数据，可以去分析数据，产生洞察。运用这些洞察，帮助英国航空提高燃料效率。
+
+举个简单的例子，当飞机着陆的时候，从它降落一直滑行到航站楼，每一个飞机平均有两个发动机。往往飞行员在滑行过程当中，要控制两个发动机，这是飞行员会做的。
+
+GE分析，在滑行过程当中，不需要两个发动机同时工作，把一个关掉，大概一次去省10万。你想一下，英国航空每年有多少架次的航班。如果将所有航班架次上都加起来，可以省好几百万。
+
+一旦有了数据之后，分析数据能够获得这些洞察，发现飞行员也愿意改变驾驶习惯，这就是我们所说的数据的力量，能够帮助你节省燃油。这种商业模式使得GE从原来出售产品，转为解决用户问题的销售方案。**数字化使得销售产品转为解决客户问题。**根据情况开展服务，基于你的数据，可以大致分析，什么时候可能发动机会出现问题。如果说你可以做这种预判，可以在问题爆发出来之前解决。
+
+如果说在问题出现之前，你就能够解决，不会因为突然的故障，使得飞机无法使用。因为你等于未雨绸缪，可以通过维护解决这个问题。以前因为没有办法做到这一点，等于飞机突然之间出了故障，飞机停飞，维修，这个成本非常高。现在可以预判哪些地方可能会出现问题，你可以提前进行维保，英航非常愿意为此服务买单。
+
+第二，根据客户的收入，比如说GE跟英航说我可以保证，增加燃油效率1%。因为我能够保证这一点，所以你的利润可以增加20亿，我要求分成，你给我40%。这样客户绩效的结果提高，你根据绩效的提升，然后分成。
+
+现在GE这种软件做得非常、非常好，不单单卖给GE的客户，还卖给其他的客户。GE也是将软件卖给非GE的客户。比如说劳斯莱斯的发动机也可以用GE的软件，甚至这些软件还可以卖给其它行业。
+
+我们想一下它的商业模式，原来这些是GE的现有客户，买它的硬件。在数字商业模式下，你的用户就是你所有行业的用户了，可以卖给非GE的用户，也可以卖给任何做工业设备的公司。价值定位原来只是销售硬件，现在可以改进硬件；原来是进行故障维修，现在可以根据硬件情况开展服务；原来免费赠送软件，现在软件即为服务；之前不会考虑到谁来吃它的汉堡，现在知道谁在吃它的汉堡。
+
+所以，可以从客户所取得的成绩（业绩）上获得收益，包括航空、航天、智能等等。原来是长周期的硬件，现在变成周期比较短的软件；原来是封闭式系统，现在变成开放架构；原来是谈六西格玛管理，现在谈怎么节约；原来是讲100%完美产品，但是软件想办法做最小的可行产品。
+
+标准合同、销售周期都不一样，原来是长销售周期，现在是短销售周期；原来是产品知识，现在变成客户的销售成果基于解决方案；竞争对手原来是劳斯莱斯和惠普，现在是Google、IBM。
+
+1.3数字化转型的十大原则。
+
+我知道中国在人工智能投入非常非常大，大数据的分析软件，关键的一点是要能和硬件连接在一起，这里有大量价值。如果你想这么做，数字的转型能够帮助到大家。这里有十大原则。
+
+第一，你要创造燃烧的平台。
+
+再回到GE案例，在2012年开始这样的工程项目，因为他们发现，有一些硅谷的软件公司，在接触英航，给英航提供一些软件，说你给我一些工程的数据，把数据交给我们，帮你分析，给到你洞察，告诉你什么时候要去做维护。
+
+GE很害怕，维护保养合同可能慢慢从原来GE手上，到了第三方这里，所以燃烧的平台被建起来，等于要看到一个威胁。对于很多工业化的公司，如果你不做数字化很快会死。你要说服整个组织，我们必须要做数字化，否则我们会死。
+
+所以，要想办法创造燃烧的平台，创造紧迫感。
+
+第二，你在做数字化转型的时候，必须要有一个数字部门开发软件。这个部门的头儿必须来自于数字世界。因为在很多行业和公司，并没有数字化的人才。可能是有IT专家，他们关注的是效率，不能够打造软件即产品、软件即服务这种产品，你得招一些数字世界的人，他们真正能够去做数字转型。
+
+第三，确保你的数字项目负责人有一个工业技术背景。归根到底是两者（硬件和软件）融合。
+
+再回到GE案例，他们做了一个软件中心建在硅谷，招了硅谷的一些人来负责。硅谷的软件中心主要负责由飞机发动机所收集的数据，这仍然在工业部门，他们有客户、有数据，所以这两个部门（硬件和软件的人）之间必须要合作，必须要有工业背景，能够教这些数字的人才，到底这个硬件是怎么一回事，这一点非常重要。
+
+第四，你要不断去演练，告诉你的员工、客户你在做什么。好好跟客户解释一下，到底在做什么，看看客户是不是喜欢给他带来的这些不一样的结果。
+
+第五，你必须要有数字的人才。GE数字化中心在硅谷招了2000多人。你去招软件人才的时候，他们并不是想我到底应该加入GE还是劳斯莱斯，他们说我是不是要加入GE，还是说应该加入Google。
+
+所以，你得给他们不同的薪资，往往他们都是比较年轻的员工，喜欢在硅谷这样的环境里工作，所以你要打造一个很正确的环境，而且工资要给的不一样。
+
+所以，你肯定是要吸引不同的人群，比如GE去雇佣硬件（制造、生产）的人，往往要填20页的表格。你去招一个硅谷的人才，填一个20页的表格，根本没有这个耐心。人才招募技巧也要不一样，给的工资也不一样。
+
+第六，你的数字部门必须是独立的部门。这也是为什么GE数字部门设在了硅谷，这个部门要和总部连在一起，毕竟客户是总部管的，总部也有数据，所以部门是单独列出来，要和总部能够联系在一起。
+
+第七，非常重要的一点，每一个业务条线要有首席数字官（软件和硬件能够连接在一起，里面可能有一些冲突，要管理好）。
+
+第八，GE也想了一个冲突解决方案，销售业绩等于两边都要分。一个工业部门，另外软件部门，如果都能分到，工业部门也愿意开放数据，同时软件部门能够有客户来买产品。
+
+第九，从原来产品为导向，转向建生态系统。软件不可能什么都能够做到，所以要有一个应用的开放者，要开放你的平台，让别的应用能够嫁接到平台上。
+
+第十，还要想清楚什么时候会有这种客户的分流，解决同类相食问题。比如说，你要做数字化，有可能硬件的销售会下降。因为你做预判性维护，原来是发动机坏了之后去修，做软件服务是基于预判了，维修收入会下降，要应对这种收入分流问题（同类相食问题），要从原来卖产品，变成打造一个生态系统，必须要做这样一种转型。
+
+2．战略意图与盒子三转型
+
+如果你希望能够有创新能力，必须要有非常大的战略意图。
+
+2.1公司A与公司B
+
+假设两个公司，公司A、公司B。公司A有大量的资源，但是梦想、野心非常小；公司B资源非常少，但是公司B有非常大的梦想、非常大的野心。所以公司A的想法，永远要维持现状。但是公司B资源不够，非常少，要获胜必须要通过“创新”。
+
+举个例子，70年代早期，施乐公司成为全球复印机领域的老大。它们生产复印机卖给公司是20万美金一台，这个公司有大量资源，但野心不大，所以施乐公司竞争方式，想办法去建立壁垒。你一旦大量建立壁垒之后，就觉得自己是安全的。
+
+施乐等于是建了很多城堡，围满了进入壁垒。
+
+首先，第一个进入壁垒是专利。它将设备20万美金/台的设备，各种各样的特点全部申请专利。所以，任何人想进入这个领域，你会看到有专利的壁垒，必须要去克服这一点，怎么办？要去花很多钱，才能够打造出比施乐专利更好的专利，所以这是第一个进入壁垒。
+
+壁垒二：施乐的设备要卖20万美金，都是卖给大公司。在美国只有大概500多个大公司（GE、百事可乐、可口可乐），这个大公司有一个复印中心，复印中心会去买20万元的产品，只有这500多个公司是它的客户。所以，他们打造了一个直接销售的团队，销售团队质量非常、非常高，而且和财富500强公司打造了非常坚实的关系。
+
+壁垒三：24小时服务组织。如果设备出问题，整个复印中心就不能工作了。所以像GE这样的公司，如果有一个复印中心，要求你24小时都能提供服务。如果设备出问题，你马上要派维修人员帮他们解决问题。像GE这样的公司，不管价格怎么样的，关心的是100%设备都能够进行复印。所以，施乐做了一个非常好的服务团队，24小时，而且服务团队技术非常好。如果你要进入施乐这个领域，也得打造这样一个服务团队，这是第三个进入壁垒。
+
+壁垒四：除此以外，施乐并不是直接卖给你，而是租给你，所以通用电气要买20万的设备，并不是直接给你一张支票，上面写着20万美金，可能给你的是每个月租金。也就意味着施乐等于为这些客户的购买行为提供资金支持。如果你要进入施乐这个领域，这家公司得像银行一样，有非常多的钱为客户购买行为去融资，所以这是第四个进入壁垒。
+
+第五，施乐花大量的钱打造自己的品牌，在当时那个年代，可以知道施乐的品牌有多么强。
+
+任何一个进入壁垒就足够了，你有五个（进入壁垒）等于建立了一个城堡，施乐的人在这个城堡里面坐着。有那么多的进入壁垒，你根本没有办法去打破它。所以，你不可能玩它的游戏，遵守它的规则来和它竞争。
+
+在70年代早期，有两家公司（IBM、柯达）想要去攻击施乐，IBM有很多的资源，野心也不够（就像公司A）柯达也有很多资源，但野心也不够。所以，柯达和IBM想去攻击施乐，想按照施乐的方式玩游戏。问题是你如果按照施乐的游戏规则去玩，不可能获胜。因为施乐建了非常多的进入壁垒，所以IBM和柯达都失败了。
+
+佳能是坐着热气球来的。如果你是坐着热气球来的，原来建的这些护城河、进入壁垒全都没有用了。
+
+佳能资源不够，但是想法非常宏伟，这就像公司B（有非常远大的梦想、资源不够）怎么办？要打败施乐，不可能按照施乐的资源来匹配，因为你根本没有这些资源。
+
+所以，你要获胜的唯一方式是盒子3的创新。
+
+佳能进入市场针对一个完全不一样的细分领域（个人、小的企业）。施乐关注的是大公司，佳能关注是小的公司和个人。他们卖的是1000美金的复印机（个人用桌上的台式复印机），这样的话，所有进入壁垒都没用了，因为你的专利都是大设备，佳能做的小设备；直销团队也没有用了，为什么？因为如果你是卖给几百万个人用户，不可能说我直接打造一个直销团队，所以1000块钱的机器，在那些经销商那里卖，自己不建销售团队；24小时的维护也没有意义了，为什么？因为佳能确保这个设备100%可靠。如果这个产品100%可靠，等于你也不会坏，也不需要去维修，对于那些比较容易坏的东西，佳能是模块化生产，你可以买一个零部件自己换；资金支持也没有意义了，因为也就1000美金的复印机，客户直接付现金买下来了。
+
+这里我觉得是最大的挑战，同时也是中国公司面临的最大机会，你得有非常宏伟的战略意图，如果这样你就可以重新改造游戏的规则，在每一个行业里边都可以想出全新的跳高方式。
+
+2.2改变游戏规则
+
+有关于改变游戏规则的例子，不得不提一个电影，建议去看一下——《阿波罗13号登月计划》，这是好莱坞的一部非常好的电影。
+
+这是阿波罗计划里面的一次任务。阿波罗13号现在离地球20万英里，突然一下子缺乏了氧气和动力，没有办法登陆月球。
+
+那时候阿波罗13号剩下的挑战是机上宇航员怎么安全返回地球，现在离地球有20万英里，而且现在机上缺乏了引擎，也没有氧气。
+
+所以，现在的挑战3位宇航员，怎么样可以安全返回地球。
+
+《阿波罗13号》控制模块，只剩下一点点动力，把这3位宇航员送到指挥舱。大家也发现了，和地球还是差一点距离。如果你们看电影，会发现这次任务总管（阿波罗13号主管）有一个非常大的梦想——我们会把这3个宇航员安全送回地球，不会是一次失败的任务，这个成功的概率大概只有5%，95%的失败概率。虽然可能里面有95%的失败概率，所以这次任务CEO说，我们一定会让他们活着安全返回地球。
+
+这里面有两条非常重要的心得，当然中间大家可以去看电影，关于三盒，这个电影里面到处都有启发。
+
+实际有好几个高管看了这个电影以后，花了一整个礼拜时间去复盘、分析电影，也就是讨论三盒创新里面，电影教会我们什么。其实每一幕，你都可以停下来去分析。
+
+比如说，怎么样去建立大大的目标，怎么样去改变游戏规则，怎么样去识别一些非线性的领先地位，怎么样去协调你的资源，怎么样做**盒子2**的创新等等，各种各样的启发。
+
+从中挑几点，聚焦于几个非常重要的心得。
+
+比如，在这次任务CEO说的话，我们一定会让他们返回地球，这实际上发出了强有力的信号。首先拿了阿波罗13号的一个计划，扔到垃圾桶里了。关于这次飞行的一些计划书（本来的方案）全扔掉了。我们先要学会忘记才能建立盒子3的创新，这也是他做的一件时期。
+
+还有一件事情也是一个强大的信号，他说：我们一定要让他们活着安全返回，这是我们能够做到的最好的一件事情。他告诉组织上下，如果有人不相信战略的意图，我现在立刻离开这个组织。如果你不相信这个旅途，我们现在就离开。为什么这一点这么重要？不仅仅你要有一个非常大的梦想，还不能够有任何怀疑，组织上上下下大家一定必须要去相信。因为一旦有怀疑，会引发别人的一些负能量，这也是非常强有力的信号。
+
+接下来他们采取了一系列措施，能够让这3位宇航员返回家园。他们走的每一步，非常接近核心竞争力，或者是盒子3当中的创新和颠覆。
+
+所有他们采取的措施，都是创造缩小可能性的差距。要么是接近核心举措，要么颠覆。 
+
+比如说，他们遇到的第一个挑战，指挥舱只有一点点动力了，所以他们决定首先把指挥舱暂时关闭，暂时把这3位宇航员搬到了月球舱。现在让3位宇航员全都进入月球舱，那时候二氧化碳实在太多了，3位宇航员全都挤在月球舱里。那怎么去维持呢？这里面二氧化碳的含量，也不能发一些零部件过去，离地球20万英里。大家看电影，你发现他们有了一个盒子3的创新，所以我想说你走的每一步，要打造中国的未来，都需要有盒子3的思维，或者需要有另类的一些思考。
+
+还有一个例子，他们遇到了最后一次挑战，要逃离月球的重力，就要回到地球的重力系统里面去。原来的飞行计划，指挥舱有另外200磅的重量。但是现在，指挥舱里没有200磅的重量了，如果以非常轻的重量接近地球，进入不了大气层。他们又有了一个盒子3的创新，哪怕没有200磅的额外重量，也是脱离了月球重力，而进入了地球。
+
+《阿波罗13号》第二条非常重要的启示，这当中每一个重要的盒子3的举措，都是来自于组织的底部。盒子3的创新，没有一条是来自于CEO。
+
+上节课有同学问到，组织当中谁里产生这些创新呢？自上而下的那些高管，还是来自于一线的员工？我可以回答，大部分盒子3的创新，都是来自于一线员工。
+
+事实上，组织里面只有CEO在考虑盒子3的事情，你不会有很多盒子3的创新了。我们来想象为什么，如果这是我们的组织架构图，现在比较流行这种结构，把CEO放在金字塔底部，而把客户放在金字塔顶部。我去到每一个公司都知道，到底谁在使用那些公司的私人飞机？我们还是按照老的架构来。
+
+盒子的战略总是来自于上层，底部的人工作是执行、落地，中间的人去确认，所以大部分组织大型的都是这样子来操作，最上面的一些人他们思考，最下面的一些人做事情，中间的人去确认。
+
+如果你的公司是这样一个组织架构，我会说这家公司不能够做创新，我们来想想为什么，其实这里面有两个非常重要的问题。
+
+问题一：如果你只是让最上面那帮人去思考，我觉得他们不能有什么新的一些思维。因为最上层的人，最多的问题是盒子1的问题，手上有最大的盒子1的问题，没有办法去忘记。为什么？因为剪式跳高法是他们发明的。
+
+而且，我们靠剪式跳高方法赚了好多、好多钱，这过去是他们创造的。正是因为他们创造，所以他们无法忘记。
+
+问题二：只有那些做事情的人，他们才最接近非线性的创新和变革，就像组织里面你想谁最快能够了解到客户的一些变化，把握竞争格局的一些动态，全都是活跃在一线的员工。
+
+全线的那些人他们是离客户最近、离竞争对手最近、离技术最近，所谓我们那些做事的人，而且他们不仅仅离未来最近，离过去是最远的。所以，我们说大部分盒子3的创新，应该是来自于基层（特立独行的人）。
+
+3.三盒创新练习
+
+最后，我和大家分享一下，要使用三盒创新模型需要做的一些应用练习。这是你们在组织里面可以用的工具。
+
+第一，让你的管理层聚在一起，想一想，有多少时间花在盒子1上，有多少时间花在盒子2、盒子3。
+
+第二，如果你发现在盒子1上面花的时间太多了，要考虑一下背后的原因，为什么会在第1盒子花了时间，为什么没有做第2、第3个盒子。管理团队要开会，想一想怎么能够打破现在的现象。
+
+第三，想想行业未来会怎么样？比如你对于颠覆式技术的假设，怎么样让非消费者变成你的消费者，非传统的竞争对手，新的销售渠道、监管变化，之前跟大家讲的孩之宝的例子，让管理团队好好做头脑风暴，想想未来假设怎么样。
+
+你找到假设之后，看一下盒子1能够做什么，再去想办法想一下盒子3有哪些创意和想法。盒子3想法分类，有多少接近你的核心，有多少颠覆你的核心。最后一部分，因为有这种非线性的变革，需要忘记哪些挑战。再回到孩之宝非线性，你有哪些核心东西要忘记。
+
+第四个练习，要有战略意向，要根据三个标准验证，是不是给到你方向、动力、挑战。你想一下大的梦想是什么。
+
+第五个练习，找到你的核心竞争力，想一下我们昨天讲战略整个的架构，核心竞争力在哪里。不但要列出来，还有三个标准，是不是能够在不同平台上利用，你这样做是不是能够创造价值，这个东西是不是能够确保竞争对手不能够抄。
+
+第六个练习，一旦找到了这些想法，建议你划分主次，不可能将这些想法一下子都去做。这里有两个标准：
+
+（1）想法吸引力。这是一个大的想法，还是小的想法。
+
+（2）可行度。到底你要做这个想法有多容易。
+
+以上两个结合在一起，可以很好排序。
+
+第七个练习，一旦你排序之后，找最前面三个明确4点：
+
+1、客户痛点。到底客户有哪些问题。
+
+2、新的商业模式，是什么样的。
+
+3、是否这些商业模式能够满足这些痛点，市场规模有多大，潜在市场有多大。
+
+4、需要有哪些能力。
+
+下一节讲，怎么样去执行创新。
