--- a/_posts/2019-06-03-379-mba1304.md
+++ b/_posts/2019-06-03-379-mba1304.md
@@ -4,3 +4,281 @@ title: 第4节 解决执行难题
 pid: 379
 tags: [MBA]
 ---
+
+盒子3的创新想法是一回事，如何执行又是另一回事，你要如何执行它？
+
+1.执行挑战
+
+首先，需要了解执行方面的挑战。
+
+每一家企业都需要做线性的创新，即盒子1。与此同时，我们需要有非线性的创新，即盒子3。
+
+非线性的创新（盒子3），分成三类：
+
+一、“较近接近”，即那些与核心业务非常接近的盒子3创新。
+
+二、“较远接近”，即那些与核心业务较远的盒子3创新
+
+三、“颠覆性商业模式”
+
+从“较近接近”到“较远接近”再到“颠覆性”，执行风险会不断上升。性能引擎的执行风险最低。比如通用汽车，不知道如何执行自动驾驶汽车，不知道如何执行电动车，但它知道如何执行传统汽车。
+
+如果从性能引擎到“较近接近”到“较远接近”再到最后的“颠覆性”执行风险越来越高，为什么还要做颠覆性创新呢？因为每家企业都还面临着一些其他风险，即过时风险。过时风险在性能引擎到“较近接近”到“较远接近”再到“颠覆性”的过程中是下降的。
+
+如果你是一家汽车企业，你不想做自动驾驶汽车，觉得它太难，风险太高，等到2029年，你的产品可能会过时。自动驾驶汽车什么时候会准许上路？可能是2029年，也有可能是2050年，总之，未来某一个时间节点，它会成为现实，那时，传统汽车会消失。
+
+我们这样想，如果一辆车是你的，它真正的使用时间只有5%，95%的时间都在车库里。当滴滴、Uber这些公司推出共享汽车的时候，汽车使用率从5%提高到20%。而自动驾驶汽车到来时，预计汽车使用率将从20%上升到40%，到时我们一年只需要500万辆汽车，不需要2000万辆汽车。这对汽车行业的颠覆是真实存在的，如果你什么都不做，到时你将面临过时的风险。作为领导者，你需要在执行风险和过时风险之间进行平衡。
+
+我们再来看看执行的挑战，盒子3的表现是突破性想法和突破性执行的综合，结果=执行×想法。这里为什么要强调乘号？因为如果我们在想法或执行某一方面是0，结果得分就会是0。
+
+人们误以为创新就是创造力，其实不是这样的。创新不等于创造力，创造力是创意，创新是“创意”×“执行”，创新是将创造力商业化。
+
+通用汽车联合创始人爱迪生说得很好，创新是1%的灵感加99%的汗水。他非常了解，因为他是有史以来最伟大的创新者。1%的灵感就是 “想法”，99%的汗水指的是“执行”这个想法，将想法转化为影响力。
+
+我与企业高管合作时，通常会问他们，如果给自己的突破性想法打分，1-10分可以得多少分，1很差，10最高。同样，给执行突破性想法打分，1-10分得几分？他们通常给出的分数，突破性想法能达到6分，而执行突破性想法只能打1分，那对于这家公司，突破性结果得分是6×1=6分。
+
+如果该公司希望提高突破性结果得分，怎么做？通常他们做的是尝试提出更加出色的突破性想法，花更多时间做头脑风暴，将突破性想法从6分提升至8分，8×1肯定好于6×1。但这个问题可以换一种方法来考虑，为什么不花费同样的努力，将执行分数做得更好，从1分提升至3分。
+
+事实上想法是不会失败的，头脑风暴中没有坏想法，所有的想法都可以写到白板上，做了头脑风暴之后，大家都很开心。只有在想法执行期间，你才会失败，因为只有在执行期间，才真正开始分配资源，开始具体操作，只有当你具体做事时，你才会失败。
+
+同样，性能引擎在想法构思期间并不会抱怨，因为即便是性能引擎的人也可以跟着去五星级酒店开会，大家一起头脑风暴，玩得很开心。但在执行时，你将资源分配给盒子3，性能引擎的人会说：是我们带来公司所有的收入，我们需要资源，为什么要把资源分给一个抽象的概念？分给自动驾驶汽车？我们甚至不卖这种车，为什么还要给他投钱？
+
+所以99%的汗水是非常重要的，三盒解决方案中最大的难题是“执行”。
+
+2.创新执行三原则
+
+怎样能够减少执行风险？如果可以降低执行风险，就可以真正抓住盒子3的机会。这里有三个规则，如果能够遵循这三个规则，就可以成功地创造新的组织逻辑，同时又不失原来的主导逻辑。
+
+举个《纽约时报》的例子，假设现在是1995年，互联网几乎还没有出现，像facebook、Google、百度这样的公司还没有诞生。纽约时报的一个员工找到CEO说，互联网在将来会是一个大事件，我们也要开始做互联网媒体业务，上了一个名为“数字纽约时报”的项目。在这里商业模式发生了非线性变化。
+
+报业的商业模式中，通常有两类客户，读者和广告商。对客户的价值主张是高价值的内容，收取订阅和广告的高端会员费。纸质报纸的价值链架构是每天收集新闻，出售订阅会员 ，出售广告位，需要大量的印刷机打印报纸，24小时发行一次报纸。报社的核心竞争力是新闻，竞争对手是其他报社。
+
+互联网媒体从根本上改变了纸质报纸，以非线性的方式改变了报社的商业模式。
+
+互联网媒体的价值链架构有根本的不同，不需要印刷机。客户还是所有人，但互联网媒体可以免费提供内容，也许部分免费部分收费。广告模式也发生了变化，传统媒体中广告是为了品牌建设，而在互联网媒体中是有针对性的广告，比如你在读一篇关于癌症的文章，它就可以显示癌症药物的广告。在互联网媒体上，内容是不断更新的，互动的，客户可以自己产生内容。竞争对手也完全不同，互联网媒体的竞争对手是其它互联网公司，facebook、Google等。核心竞争力也不同，互联网媒体的核心竞争力是软件，纸媒的核心竞争力是新闻。
+
+1995年，纽约时报有两个业务：报业和互联网媒体。报纸业务是盒子1业务，数字纽约时报是盒子3业务，盒子1是性能引擎，给你带来所有的收入和利润，是对未来进行投资的基础，盒子3是商业模式创新。
+
+性能引擎的执行是日常执行，盒子3的执行是创新执行，两者都需要强大的执行力，但执行挑战完全不同。
+
+主导逻辑可以执行盒子1业务，但不能执行盒子3业务。主导逻辑是为特定目的而构建的，它旨在促进剪式跳高的线性创新，不能做非线性业务。如果要做突破性创新，想执行非线性创新，必须创建一个新的组织逻辑，而不失主导逻辑。
+
+换种方式解释，盒子1是紧急的事，盒子3是重要的事；盒子1是短期利润，盒子3是未来利润；盒子1是关于效率的，盒子3是关于灵活性的；盒子1的每个任务都是可重复的，这样就能发挥规模经济、专业化、提高效率等原则，而盒子3是非常规的；盒子1的每项任务都是可预测的，因为这是一个可预测的系统，所以盒子1业务的总经理必须要对短期财务业绩负责，而盒子3是基于弱信号，没人知道盒子3如何赚钱，这是一个不确定的系统，你不能要求盒子3业务的总经理负责短期财务业绩。盒子1是关于当下的，盒子3是关于未来的。
+
+所以，主导逻辑可以执行盒子1，但很难执行盒子3。 必须创建一个可以执行盒子3的新组织逻辑，同时不失主导逻辑，因为剪式跳高依然有效。
+
+如何创造这种新的组织逻辑？
+
+每个盒子3创新都将面临3个挑战，即“忘记”、“借用”、“学习”挑战，每个挑战的应对都对应一条规则。你必须创建一个专门的团队，他们能忘记主导逻辑的规则。同时，专门的团队必须与性能引擎合作，这样它可以从性能引擎中借用一些资产。同时，这个专门的团队应该用最少的钱，检验“弱信号”的真假。
+
+为了克服“忘记”、“借用”、“学习”的挑战，你必须彻底改变盒子3团队的DNA，这是盒子3团队唯一可以成功地“忘记”、“借用”、“学习”的方法。
+
+2.1 应对“忘记”挑战
+
+究竟怎么做呢？回到纽约时报的故事。1995年，纽约时报从外面聘请了Martin Nisenholtz作为数字纽约时报业务的负责人。这是比较大的一个动作，因为纽约时报一般不会从外面聘请高层人员。事实上，如果你在纽约时报的工龄不到20年，通常被称为新人。而且Martin Nisenholtz在报纸出版行业没有任何经验，他是来自于线上行业，曾在奥美广告工作过，负责其数字广告业务。
+
+这种安排有一些好的方面：
+
+首先，他带来了纽约时报原来没有的能力，即数字化能力；
+
+其次，他没有盒子2的问题，他不了解报业，没有什么需要去忘记。
+
+1995年纽约时报创建了如下组织架构:
+
+在这个组织架构中，Martin Nisenholtz位子很高，向报纸公司总经理汇报，给他分配的团队都是纽约时报很有经验的新闻记者、IT人员。在接下来的3年时间里，数字纽约时报没有取得多大进展，因为Martin Nisenholtz被顶部和底部的主导逻辑夹在中间了。他向报纸公司总经理汇报，而且底下人都来自于报纸原来的员工。
+
+纽约时报的主导逻辑为什么做不了互联网媒体业务，因为有太多“忘记”的问题，他们必须忘记原来的核心竞争力新闻，他们必须忘记新闻在24小时内只发一次，还要忘记印刷，忘记广告客户，忘记收取订阅费和广告费的模式等等。但是，报业团队不能忘记这些东西，因为要在报业上赚钱。
+
+纽约时报是一家报业公司，数字纽约时报不是一家利用了互联网技术的报业公司，应该是一个技术公司、数字公司。就好像，内燃机汽车是汽车，自动驾驶汽车不是汽车，是驾在四个轮子上的电脑。Airbnb不是简单的酒店业务数字化，它重塑了数字世界的待客概念。这是商业模式的创新。
+
+1998年，纽约时报CEO有了一些大胆的举措。
+
+首先，晋升了Martin Nisenholtz。Martin Nisenholtz和纸媒总经理两者都向CEO汇报。
+
+其次，纽约时报的CEO告诉Martin Nisenholtz，去打造一个技术性企业。12个月时间里，团队75%的员工来自外部，不受到纸质报纸业务的束缚。可以到硅谷雇用技术人才。当你到硅谷雇佣人才时，与报纸业务相比，这个行业的人才更加年轻，你给的薪酬也不一样，因为来自硅谷的软件工程师，考虑的不是加入纽约时报还是其他哪家报社，他考虑的是应该加入纽约时报还是谷歌。
+
+另外，Martin Nisenholtz被授权不受报纸业务流程的限制，可以建立自己的流程指标。
+
+所以，为了让盒子3忘记主导逻辑，必须创建一支专门的团队，允许专门的团队具有与性能引擎不同的规则，可以聘请不同的人，支付不同的薪酬，可以有不同的流程指标。
+
+这里有三个常见的错误，如果你能避免这些错误，就能够应对“忘记”的问题。
+
+常见错误一：仅从内部聘用。
+
+有时在成立盒子3团队时，只是将人员从盒子1调到盒子3，这不是真的盒子3。这里有两个规则：
+
+规则一：一定要从公司外部聘请专门团队的领导者，因为他是挑战现状最有力量的人。
+
+规则二：至少1/4的员工来自外部。如果来自外部的人员不到1/4，会有很多“忘记”的问题。
+
+常见错误二：专门团队与性能引擎分工不当。这里有几个规则：
+
+规则一：如果需要一个新技能，一定要加进专门的团队。比如要做自动驾驶汽车，就需要一个计算机科学专家，把计算机科学专家加进专门团队中。
+
+规则二：合理划分专门团队和性能引擎的任务。
+
++ 如果权力平衡发生变化，应该偏向专门团队；
++ 如果需要新的协作，应该倾向于专门团队；
++ 如果需要不同的工作节奏，应该遵循专门团队
+
+常见错误三：采用性能引擎的指标和流程。
+
+专门团队是为了创建新的商业模式，需要新的指标、新的流程。
+
+总结来看，你必须创建一个专门团队，在物理上与性能引擎分开，且可拥有不同的规则、不同的流程。
+
+2.2应对“借用”挑战
+
+但是，专门团队不应该与性能引擎完全隔离，否则专门团队就没有现有优势。专门团队可以击败硅谷纯粹的互联网媒体公司的唯一方法是，借用一些性能引擎的资产，可以使数字纽约时报收益的资产有哪些?
+
+第一，品牌。数字纽约时报一上线就会很有知名度。
+
+第二，内容。上百年的数字档案，纯粹的互联网媒体不会沉淀这么多内容。
+
+第三，广告合作关系。纽约时报有上百年的广告合作关系、订阅用户。
+
+报纸和数字纽约时报共享品牌、内容、广告主、客户关系，肯定有很多冲突。
+
+第一个冲突是有限的资源， CEO手上的资源是有限的。而且这种资源的冲突会一直持续下去，从盒子3项目一开始的第一天起，一直不会消失。因为盒子3项目不断扩大，需要越来越多的资源，资源和市价上会有持续的冲突。
+
+第二个冲突是时间范围，盒子1专注于短期，盒子3专注于长期。
+
+第三个冲突是同类相食。
+
+1995年纽约时报CEO做投资，可以放在报纸上，带来80%的毛利润，可以投在互联网媒体上，回报是在未来出现，而且未来不一定能得到。如果说未来有回报，它可能还蚕食了纸质报纸的收入。
+
+这些冲突是实实在在的，盒子3、盒子1团队发生冲突，不是因为两边都是坏人，而是他们做的是两个不同的工作。盒子1是线性创新，盒子3是非线性创新，两边一起工作，肯定会有很多的冲突。
+
+如果忽略盒子3、盒子1之间的冲突，轻微的紧张将变成极端的竞争。如果忽略他们之间的极端的竞争，就会变成极大的敌意；如果再忽略掉这些敌意，最终会是愤怒的战争。
+
+然而，如果盒子1、盒子3是健康的伙伴关系，公司可以取得很大的进步。当你想做数字化转型时，必须创建一个专门的团队来开发软件，让他们可以按照完全不同于性能引擎的规则做事。但是，专门的团队必须和母舰相连，创造数字化解决方案，提升客户绩效，唯一的方法是软件与硬件融合。这种融合不可能顺畅，会有非常多的冲突。有三种策略可以帮助建立健康的伙伴关系。
+
+开始做盒子3项目时，想要成功地“忘记”、“借用”，必须要创建一个独立但由于母舰相连的团队。盒子1是方形，是主导逻辑，纽约时报纸媒就像这个方块。数字纽约时报是是菱形，是专门的团队。菱形与方形形状不同，意味着可以在专门团队中拥有不同的规则，聘请不同的人才，采用不同的薪酬，拥有不同的流程，使用不同的指标。
+
+同时，专门团队要与母舰相连，在母舰内部必须有共享员工，共享员工依然在性能引擎里，遵循性能引擎的规则。与此同时，他们必须要帮助盒子3团队。这种合作永远不会顺利。
+
+回到通用汽车航空事业部的例子，他们在硅谷创建了一家硅谷数字创业公司，为飞机引擎开发软件，这个软件团队是与母舰相连的，母舰是通用汽车航空事业部，客户是都来自母舰，客户是工业企业，工业企业有软件部门的数据，数据是软件部门分析的内容。当连接到母舰时，肯定有很多的冲突。冲突的产生，并不是说谁不好，也不是说他们抵制变革，而是因为两个群体遵循不同的规则。
+
+盒子3专门的团队不是孤立的团队，是拥有和母舰共享员工伙伴关系的团队。共享员工在性能引擎中，但同时是盒子3创新团队的成员，显而易见会有冲突。因为专门团队100%专注于盒子3，共享员工只是盒子3的兼职人员。过去共享员工只有一份工作，只支持性能引擎。现在这些人还要去帮助盒子3，这种转变肯定不可能顺利，这也是为什么有冲突。冲突是健康的，如果你可以管理这种冲突，就能建立伙伴关系。如果你不能管理好冲突，就会出现战争。当战争发生时，性能引擎会击溃你。
+
+如何建立伙伴关系避免战争，需要避免三个错误。
+
+错误一：借用太多。盒子3与盒子1的借用关系应该只限于一种资产，超过一种就会有很大的冲突。你需要在盒子1性能引擎里确定可以给盒子3带来极大竞争优势的一种资产。
+
+错误二：忽视性能引擎的合理抱怨。性能引擎有很多抱怨，很多时候这些抱怨是正确的，他们不是抵制变革，要倾听性能引擎的抱怨，如果是合理的，去解决这些抱怨。往往有三种抱怨：
+
+1、我想帮助盒子3，但得给我更多的资源。过去共享员工只做一份工作，现在他们既要做性能引擎的工作，还有帮助盒子3团队的新工作，这意味着共享员工工作量增加了。当共享员工说需要更多的资源时，倾听他们说的话，做一下分析。如果确实工作量上升了，而且他们没有富余人力，就要给他们更多资源。
+
+2、没有奖励共享员工的工作，没有给共享员工激励。假设你有一个共同的销售团队，过去他们只卖盒子1，现在要求他们盒子1和盒子3都卖。销售团队会说，我愿意卖盒子3的产品，但是与盒子1相比，盒子3的产品更难卖，因为盒子1是熟悉的客户。盒子3是一个新的价值主张，是一个更难卖的产品，但给一样的佣金，没有必要努力卖盒子3。
+
+1）如果真的很难卖，给盒子3的销售加佣金。
+
+2）可以重复计算销售收入。将盒子3的销售收入放到盒子3团队中，且为盒子1计算相同的销售收入。
+
+3）设定转让价格。
+
+4）在性能引擎的记分卡中增加帮助盒子3的意愿程度。
+
+以上这些是解决激励问题的策略。
+
+3、盒子3团队的领导可能会有意或者无意地鄙视盒子1。比如你在通用汽车管理自动驾驶汽车业务，你可能会说自动驾驶汽车才是未来，汽油动力汽车都是恐龙，快要灭亡了。对抗性能引擎的人是非常糟糕的主意。性能引擎是一台巨大的机器，千万不要对抗它。事实上，性能引擎不是你的敌人，而是你的朋友。没有绩效引擎就没有盒子3。性能引擎正在为你的未来投资，创造现金流。性能引擎具有你可以借用的功能。因此在选择专门团队的领导时，标准要加一条：谦逊。聘请一个谦逊的人带领团队非常重要。
+
+错误三：忽视专门团队与性能引擎间的冲突。在这里CEO必须有很好的能力调节冲突。以下是一些可以采用的策略：
+
+1、特别是共享员工，他们必须在特定知识点上帮助盒子3，必须有一些内部人士在专门团队内部，你可以转移一些内部人士在性能引擎与专门团队间建立连接点
+
+2、在分配资源和预算时，分配给专门团队应该有一个预算一个流程，确保专门团队和共享员工可以获得资源。
+
+3、CEO必须要成为一个教练，积极解决、缓解业务冲突。只有CEO能够平衡执行风险和过时风险，CEO应该制定战略意向，清楚的展示盒子1、盒子3的角色定位，明确他们是同一家公司的必要组成部分。另外，你还要强调共同的核心价值观，价值观是另一种可以在盒子3、盒子1之间产生粘合剂的方法。
+
+建立伙伴关系，有六大常见问题：
+
+第一，让性能引擎执行盒子3，就是“忘记”的问题。
+
+第二，性能引擎是方形，专门团队是菱形，问题是两者之间没有“借用”行为。
+
+第三，性能引擎变成了菱形，意味着性能引擎来执行盒子3，问题破坏了性能引擎。
+
+第四，性能引擎是方形，专门团队是菱形，但非常小，意味着“借用”太多，共享员工太多会极大地影响性能引擎，会发生很多的冲突。
+
+第五，性能引擎是方形，是一个独立的团队，意味着只是将人从性能引擎直接转到专门团队，结果专门团队只不过是小型性能引擎。如果大性能引擎做不了盒子3，小性能引擎也做不了。
+
+第六，性能引擎是方形，专门团队是菱形，专门团队与母舰相连，但忘记了管理冲突，没有打造伙伴关系，过多冲突两方就有战争。
+
+以上需要大家记住，你要做一个盒子3项目，希望成功地“忘记”、“借用”，必须有一个专门团队，忘记主导逻辑，又要和母舰连在一起，并且很好地管理这些冲突，有健康的伙伴关系。
+
+2.3 应对“学习”挑战
+
+接下来是盒子3的“学习”挑战。盒子3无非是很多的假设，是基于弱信号的。盒子3真正的挑战是检验弱信号，放大弱信号。
+
+10次弱信号有9次都是噪声，可能只有1次弱信号是真实的信号，我们必须要对信号进行检验，以确定它是真实信号还是噪声。这里的关键是尽量以最低的成本来检验弱信号的真假。如果检验的成本低，失败的成本就低，学习成本就低。
+
+每个盒子3都有三种类型的假设：
+
+假设一：客户会买吗？这里有很多相关假设。
+
+假设二：能做出来吗？可行性如何？
+
+假设三：能赚钱吗？
+
+这三组假设里应该先去“客户会买吗？”，如果客户不买，能不能做出来、能不能赚钱也没有意义了。首先明确客户是否购买，做了这个检验之后，再去检验是不是可以做出来、是不是可以赚钱。
+
+检验关键假设的黄金法则是用最小的资源获取更多的知识。
+
+举个特斯拉的例子。
+
+特斯拉成立于2004年，推出第一辆车是跑车，一款名为Roadster的全电动跑车。2004年，没有人听过特斯拉，他们在汽车行业没有知名度，Elon Musk本身也不是汽车工程师，他想做的第一件事情是打造自己的品牌，这是他们做跑车的原因，因为跑车不用卖很多辆，但公众对跑车的关注很多。如果制造一辆跑车，它赢得一场大赛，人们就会开始报道它。
+
+事实上，特斯拉赢得了大奖赛，赢了之后人们会写文章说，这有一家公司特斯拉，像法拉利一样，是一个很厉害的汽车制造商。所以Elon Musk决定，先推一款跑车，然后Model S（高端全电动汽车），再到Model3(大众市场的电动汽车)。
+
+一辆全电动的跑车，如何检验客户是否会购买? 你不能直接问客户要不要，这不是正确的检验方法。客户无法告诉你，你不能因为客户简单地告诉你我喜欢全自动跑车就开始生产，这是一种非常弱的检验。但你又不想先造一个全自动跑车再去检验客户是否购买，因为成本非常昂贵，你甚至连原型机都不能做，原型机也太贵了。因此验证成本必须高于纯概念检验，纯概念检验就是问客户你是否愿意购买，但真正的检验比原型机成本低很多。这就是Elon Musk检验这个假设的方式。
+
+跑车通常都是非常富有的人才买的，所以他们不在乎价格，他们真正在乎是性能，比如百公里加速必须要非常快，他们还比较关注设计。Elon Musk想知道的是在这些有钱人中是否有一部分人也关注环境问题。因为跑车耗油量巨大，是否在有钱人群体中有这么一个细分市场，想享受跑车，又想环保。如果有足够大的人群，他就可以建造全自动跑车。
+
+但是如何验证这个假设呢?他是这么做的。
+
+路特斯是英国一家非常著名的跑车公司，他们设计、生产跑车。Elon Musk找到路特斯说，我很喜欢路特斯Elise这款车，能不能免费赠送我6个路特斯Elise的车身，把引擎盖里的东西全拿走，只要车身。路特斯为什么要给Elon Musk？因为Elon Musk说如果我开始生产全自动跑车，就会给路特斯买车身。事实上，现在所有的特斯拉跑车用的都是路特斯的车身。为了获得未来收入，路特斯免费给Elon Musk6个车身。
+
+Elon Musk拿到车身后，用交流电动机、电动机电池等部件把他组装好，让他看起来就像一辆全自动跑车，而不是原型机。Elon Musk把这6辆车放在美国跑车购买者最多的6个城市，放在最繁华的购物区。很多人都围过去看，看的时候需要填一份调查问卷，你喜欢什么车？你喜欢什么功能？你愿意付多少钱？等等。
+
+但Elon Musk又多做了一步，如果你喜欢这部车，给我支付5000美元的订金，这款车还没有开始设计，没有开始生产。如果有足够多的人给我5000美金我就开始设计，4年后到2008年可以交车。这是用最小的订金给你显示性偏好。你必须以可靠的方式确定客户是否真的想购买，这就是他2008年开发特斯拉Roadster的方法。这就是用最少的钱获取最大的知识。
+
+对于盒子3项目，创新领导者完全有可能完美地执行任务，也可能创新实验失败得很惨，而这对于盒子1是不太可能发生的，对于盒子1，领导者不可能完美地执行任务或盒子1项目失败得很惨。盒子3失败得很惨是指关键假设检验无效，就要关停盒子3项目，这是正确的做法，所以不要对盒子3的领导做短期财务结果的评估，要根据检验关键假设的效果来评估他们。他们如何构建低成本实验，他们根据实验学到了什么。
+
+盒子3的三个原则，说起来容易，做起来难。
+
+原则一：创建一个专门的团队。他们可以采用与性能引擎完全不同的规则，这样才能忘记主导逻辑。
+
+原则二：专门团队应该与母舰相连，建立与主导逻辑的伙伴关系。
+
+原则三：对专门团队领导者进行评估，是否通过更少的资源，检验更多假设，获取更多知识。
+
+做到以上三点，就可以降低盒子3项目的执行风险，降低执行风险、减少过时风险。
+
+3.三盒创新理论新的应用
+
+最后我想谈几点想法，这三个盒思维不仅仅适用你的组织，还可以用它来推动个人的发展战略。相信在座每一位，以及听这堂课的每一位学员，都需要为自己打造一个战略的架构。或者说做自己人生的一个规划，不是光为你的组织。
+
+我出生长大于印度一个小的村子，没有电、新鲜的水，那时候的梦想去哈佛念MBA，这绝对是不可能完成的任务。但是我没有放弃，想想将来需要去找哪些虚弱信号把它放大，我的战略意向是什么，看看我想要建什么样的能力，达到何种成就。
+
+对于你们来说，你们的未来也是看现在，不是说未来你做什么。所以每天早上起床，都要来反思一下，看看我今天是不是花了足够多的时间在盒子1、盒子3。
+
+为什么经常有很多人没有投资你的时间精力在盒子3，因为如果要伤害你，也不是现在伤害，你现在看不到这种“害”。伤害你在未来，就像每天你去运动。运动以后，能够保持健康，为什么同样简单的道理，不能够应用在其它工作上呢？
+
+你今天不运动，健康问题可能现在没有暴露出来，10年以后才会暴露出来。你现在不运动，身体健康就会下降。但是一点、一点的，那么小、那么无形，你没有注意到。我想说未来在一点一滴累计当中，不是说未来突然某一天来到。
+
+怎么样能够从盒子1跨到盒子3，我有两个女儿，我在印度长大，那时候啥也没有。
+
+对我来说，努力、勤奋是唯一一条成功的道路。但是现在我的孩子条件比我好的多，怎么样让她们也有同样的饥饿感。因为我长大的时候什么也没有，背水一战，这比较容易。我的孩子们现在资源很多，条件很好，怎么样才能让他们也同样饥渴？
+
+所以，在我的孩子身上做这件事情：让她接触一些有意思的人。
+
+我们遇到很多、很多有趣的人，我也非常有幸见到纳尔逊·曼德拉，他来到我们家里，跟我们共进晚餐。我的女儿们和曼德拉去共进晚餐，你真的见到他，不可能没跟他吃这顿饭以前一样的想法。因为曼德拉在描述自己人生的经历，我的女儿们深受感动。
+
+大家也知道，曼德拉年轻的时候当过兵，扛上枪去打仗。那时候英国统治南非，因为他当过兵，后来去坐牢。不是坐27小时、27天、27个月，他是坐27年牢。
+
+在这27年时间里，他深受这些狱卒们折磨。所以他说放出来的时候，我必须要忘记我的愤怒、痛苦，如果我要打造南非的未来，必须先要做盒子2，先要去忘记。因为27年饱受折磨，完全可以走出监狱以后，以牙还牙去报仇。他没有选择这条路，他决定做盒子2去忘记，只有忘记以后，才能看到明确的未来，我要去拥抱和解、拥抱和平，所以，必须先要放下仇恨、放下自己的怨气。
+
+我的女儿们听曼德拉说这些事情的时候，真的非常有感触。所以，像中国这些年轻人就应该让他们去开眼界，接触有意思的人，这跟做生意没有关系。有意思、有趣的人会改变他们的世界观。
+
+希望大家可以将三盒创新思维同时运用于工作和生活，谢谢大家。
