--- a/_posts/2019-06-03-375-mba.md
+++ b/_posts/2019-06-03-375-mba.md
@@ -79,10 +79,10 @@ tags: [MBA]
 + [第4节 包季鸣 卓越领导：融会贯通，超越自我]()
 
 第十三章 创新管理模块
-+ [第1节 维杰伊·戈文达拉扬 三盒创新理论]()
-+ [第2节 维杰伊·戈文达拉扬 逆向创新]()
-+ [第3节 维杰伊·戈文达拉扬 数字化转型]()
-+ [第4节 维杰伊·戈文达拉扬 解决执行难题]()
++ [第1节 维杰伊·戈文达拉扬 三盒创新理论](http://www.baoguoding.com/2019/06/376-mba1301.html)
++ [第2节 维杰伊·戈文达拉扬 逆向创新](http://www.baoguoding.com/2019/06/377-mba1302.html)
++ [第3节 维杰伊·戈文达拉扬 数字化转型](http://www.baoguoding.com/2019/06/378-mba1303.html)
++ [第4节 维杰伊·戈文达拉扬 解决执行难题](http://www.baoguoding.com/2019/06/379-mba1304.html)
 
 ---
 
