--- a/_posts/2019-06-03-376-mba1301.md
+++ b/_posts/2019-06-03-376-mba1301.md
@@ -182,7 +182,7 @@ tags: [MBA]
 
 1995年的时候孩之宝应该忘记什么。如果说孩之宝的高管层他们现在要来回答这两个问题，在我这个行业里面，在未来20年有哪些非线性的变革，因为有这些非线性的变革，那么对于第二个盒子来说我现在面临哪些挑战？
 
-<img style="width: 100%;" src="https://yxs-web.oss-cn-beijing.aliyuncs.com/4a32656058d47d4873d3d967d4d5f8aa.png">
+![](/uploads/2019/06/03-01.png)
 
 让大家去想象一个未来，其实就是在问你的假设是什么，在未来20年，非线性的变革是什么样子的。
 
@@ -268,6 +268,10 @@ tags: [MBA]
 
 另外给大家准备了两个工具，帮助大家更好地使用三盒创新理论。
 
-<img style="width: 100%;" src="https://yxs-web.oss-cn-beijing.aliyuncs.com/5e546bb67a8ba41743af72cc7f4d8769.png"><img style="width: 100%;" src="https://yxs-web.oss-cn-beijing.aliyuncs.com/fb85e1a2130f742ac65086cc1827e9c0.png"><img style="width: 100%;" src="https://yxs-web.oss-cn-beijing.aliyuncs.com/5ef92cd8aca16b49e78a5936380855a7.png">
+![](/uploads/2019/06/03-02.png)
+
+![](/uploads/2019/06/03-03.png)
+
+![](/uploads/2019/06/03-04.png)
 
 下节课我想给大家讲两个非常重要的三盒创新理论的应用，就是中国如果接下来100年还希望继续领先的话需要掌握的，谢谢！
