--- a/_posts/2019-06-03-375-mba.md
+++ b/_posts/2019-06-03-375-mba.md
@@ -73,10 +73,10 @@ tags: [MBA]
 + [第4节 张凯夫 破坏式创新与无线电故事]()
 
 第十二章 组织行为学模块
-+ [第1节 包季鸣 微观层面：颠覆认知，寻求魔镜]()
-+ [第2节 包季鸣 中观层面：激活群体，赋能团队]()
-+ [第3节 包季鸣 宏观层面：聚焦生态，再造组织]()
-+ [第4节 包季鸣 卓越领导：融会贯通，超越自我]()
++ [第1节 包季鸣 微观层面：颠覆认知，寻求魔镜](http://www.baoguoding.com/2019/06/380-mba1201.html)
++ [第2节 包季鸣 中观层面：激活群体，赋能团队](http://www.baoguoding.com/2019/06/381-mba1202.html)
++ [第3节 包季鸣 宏观层面：聚焦生态，再造组织](http://www.baoguoding.com/2019/06/382-mba1203.html)
++ [第4节 包季鸣 卓越领导：融会贯通，超越自我](http://www.baoguoding.com/2019/06/383-mba1204.html)
 
 第十三章 创新管理模块
 + [第1节 维杰伊·戈文达拉扬 三盒创新理论](http://www.baoguoding.com/2019/06/376-mba1301.html)
